@@ -1,6 +1,6 @@
 from simplejson import loads
 
-from django.contrib.auth.models import User
+from django.contrib.auth.models import User, Permission
 from django.test import TestCase
 
 from slumber_test.models import Pizza, PizzaPrice
@@ -87,12 +87,20 @@ class TestBasicViews(ViewTests):
         self.assertEquals(json['fields']['pizza']['type'],
             '/slumber/slumber_test/Pizza/')
 
-    def test_instance_metadata_user(self):
+    def test_model_metadata_user(self):
         response, json = self.do_get('/slumber/django/contrib/auth/User/')
         self.assertEquals(response.status_code, 200)
         self.assertTrue(json['operations'].has_key('authenticate'), json['operations'])
         self.assertEquals(json['operations']['authenticate'],
             '/slumber/django/contrib/auth/User/authenticate/')
+
+    def test_instance_metadata_user(self):
+        user = User(username='test-user')
+        user.save()
+        response, json = self.do_get('/slumber/django/contrib/auth/User/data/%s/' %
+            user.pk)
+        self.assertEquals(response.status_code, 200)
+        self.assertTrue(json['operations'].has_key('has-permission'), json['operations'])
 
 
     def test_instance_puttable(self):
@@ -253,6 +261,13 @@ class TestBasicViews(ViewTests):
 
 class TestUserViews(ViewTests):
     authn = '/slumber/django/contrib/auth/User/authenticate/'
+    perm = '/slumber/django/contrib/auth/User/has-permission/%s/%s/'
+
+    def setUp(self):
+        self.user = User(username='test-user')
+        self.user.set_password('password')
+        self.user.save()
+
     def test_user_not_found(self):
         response, json = self.do_post(self.authn, dict(username='not-a-user', password=''))
         self.assertEquals(response.status_code, 200)
@@ -260,21 +275,37 @@ class TestUserViews(ViewTests):
         self.assertIsNone(json['user'], json)
 
     def test_user_wrong_password(self):
-        user = User(username='test-user')
-        user.save()
-        response, json = self.do_post(self.authn, dict(username=user.username,
-            password=''))
+        response, json = self.do_post(self.authn,
+            dict(username=self.user.username, password='wrong'))
         self.assertEquals(response.status_code, 200)
         self.assertEquals(json['authenticated'], False, json)
         self.assertIsNone(json['user'], json)
 
     def test_user_authenticates(self):
-        user = User(username='test-user')
-        user.set_password('asdf')
-        user.save()
-        response, json = self.do_post(self.authn, dict(username=user.username,
-            password='asdf'))
+        response, json = self.do_post(self.authn,
+            dict(username=self.user.username, password='password'))
         self.assertEquals(response.status_code, 200)
         self.assertEquals(json['authenticated'], True, json)
-        self.assertEquals(json['user'], {'pk': user.pk})
+        self.assertEquals(json['user'], {'pk': self.user.pk})
 
+    def test_user_permission_no_permission(self):
+        response, json = self.do_get(self.perm % (self.user.pk, 'foo.example'))
+        self.assertEquals(response.status_code, 200)
+        self.assertEquals(json['is-allowed'], False, json)
+
+    def test_user_permission_is_allowed(self):
+        permission = Permission(content_type_id=1, name='Can something',
+            codename='can_something')
+        permission.save()
+        self.user.user_permissions.add(permission)
+        response, json = self.do_get(self.perm % (self.user.pk, 'auth.can_something'))
+        self.assertEquals(response.status_code, 200)
+        self.assertEquals(json['is-allowed'], True, json)
+
+    def test_user_permission_not_allowed(self):
+        permission = Permission(content_type_id=1, name='Can something',
+            codename='can_something')
+        permission.save()
+        response, json = self.do_get(self.perm % (self.user.pk, 'auth.can_something'))
+        self.assertEquals(response.status_code, 200)
+        self.assertEquals(json['is-allowed'], False, json)
